# NOPE

./: .coverage  .env.example  .gitignore  .mcp.json  AGENT-OVERVIEW.md  ARCHITECTURE.md  BACKEND_IMPLEMENTATION.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  Makefile  NOPE_IMPLEMENTATION_SUMMARY.md  PIPELINE_ARCHITECTURE.md  PROJECT_PLAN.md  README.md  SECURITY.md  docker-compose.yml  emergency_implementation.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  test_agent_framework.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml  prediction-pipeline.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1754281852543-2zz9jobid.txt  session-1754281852567-pjgat4sr8-auto-save-1754281882577.json
.swarm/: memory.db  memory.db-shm  memory.db-wal
api/metrics/: accuracy.json
api/predictions/: latest.json
config/: agents.yaml
data/models/: community_model.pkl  epss_enhanced_model.pkl  pattern_model.pkl  practicality_model.pkl  temporal_model.pkl  threat_actor_model.pkl  velocity_model.pkl
docs/architecture/: README.md
docs/current-state/: ANALYSIS_SUMMARY.md  API_SPECIFICATION.md  ARCHITECTURE_CURRENT_STATE.md  DEPENDENCY_TREE.md  DEPLOYMENT_STATUS.md  repomix-output.xml
examples/: ml_ensemble_example.py
memory/: claude-flow-data.json
memory/agents/: README.md
memory/sessions/: README.md
scripts/: cleanup_stale.py  download_models.py  generate_metrics.py  validate_predictions.py
site/: .eleventy.js  .gitignore  analytics.njk  dashboard.njk  early-warnings.njk  index.njk  package.json  predictions.njk  tailwind.config.js
site/_data/: site.json
site/_includes/components/: early-warning-alert.njk  nope-card.njk
site/_includes/layouts/: base.njk
site/api/: early-warnings.json
site/api/metrics/: accuracy.json
site/api/predictions/: latest.json
site/assets/css/: main.css
site/assets/js/: prediction-engine.js
src/agents/: __init__.py  base_agent.py  controller_agent.py  cve_fetch_agent.py  epss_filter_agent.py
src/agents/enrichment/: cisa_kev_agent.py  depsdev_agent.py  exploit_availability_agent.py
src/agents/filtering/: dynamic_threshold_agent.py
src/agents/output/: api_agent.py
src/agents/validation/: data_validation_agent.py  risk_scorer_agent.py
src/config/: __init__.py  settings.py
src/ml/: __init__.py  ensemble_predictor.py
src/ml/features/: __init__.py  feature_extractor.py
src/ml/models/: __init__.py  community_model.py  epss_enhanced_model.py  pattern_model.py  practicality_model.py  temporal_model.py  threat_actor_model.py  velocity_model.py
src/ml/utils/: __init__.py  correlation_engine.py  model_utils.py  training_pipeline.py
src/nope/: __init__.py
src/nope/agents/: __init__.py  analysis.py  base.py  correlation.py  data_collection.py
src/nope/core/: __init__.py  (+2 more)
src/utils/: __init__.py  communication.py  validation.py
tests/: test_basic.py
tests/e2e/: test_minimal_deployment.py
tests/integration/: test_pipeline_integration.py
tests/ml/: __init__.py  test_ensemble_predictor.py
