[project]
name = "nope"
version = "2.0.0"
description = "Network Operational Patch Evaluator - Predictive CVE Intelligence"
authors = [{name = "William Zujkowski", email = "william@nope.security"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["cybersecurity", "cve", "vulnerability", "prediction", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # Core dependencies
    "aiohttp==3.13.3",
    "structlog==24.4.0",
    "pydantic==2.9.2",
    "python-dateutil==2.9.0",
    "tenacity==9.0.0",
    "click==8.1.7",
    "rich==13.9.2",
    "python-dotenv==1.0.1",
    
    # Data processing
    "pandas==2.2.3",
    "numpy==2.1.3",
    "aiosqlite==0.20.0",
    "redis==5.1.1",
    
    # Machine learning
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "xgboost==2.1.2",
    "lightgbm==4.6.0",
    "catboost==1.2.7",
    
    # Monitoring
    "prometheus-client==0.21.0",
    
    # API clients
    "httpx==0.27.2",
    "beautifulsoup4==4.12.3",
    
    # Testing
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-benchmark==4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.2",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "ipython==8.29.0",
    "black==26.3.1",
    "notebook==7.3.1",
]

ml = [
    "tensorflow==2.18.0",
    "torch==2.5.1",
    "transformers==4.46.2",
    "optuna==4.1.0",
]

[project.scripts]
nope = "nope.cli:main"
nope-controller = "nope.agents.controller_agent:main"
nope-train = "nope.ml.training_pipeline:main"

[build-system]
requires = ["setuptools>=75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.pyi?"]
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=html --cov-report=term"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ml: marks tests that require ML models",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''